--- a/4635-h/4635-h.htm
+++ b/4635-h/4635-h.htm
@@ -1161,7 +1161,7 @@ dangerous."
 "Well, perhaps not," admitted Ned. "But I thought I'd tell you."
 
 <P>
-"And I'm glad you did. If you hear anything more. I'll be glad to
+"And I'm glad you did. If you hear anything more, I'll be glad to
 have you let me know. Here's my card," and thanking the boys for
 their interest Mr. Whitford passed on.
 
@@ -2018,7 +2018,7 @@ border."
 
 <P>
 "Oh, we would be in communication with you," said the agent. "We can
-come pretty near telling where the contrabrand goods will be shipped
+come pretty near telling where the contraband goods will be shipped
 from, but the trouble is, after we get our tips, we can't get to the
 place before they have flown away. But with your airship, you could
 catch them, after we sent you, say a wireless message, about where
@@ -5428,7 +5428,7 @@ miles. Just sitting around, and waiting is tiresome work."
 <P>
 The others agreed with him, and then the custom officer told many
 stories of his experiences, of the odd places smugglers would hit
-upon to conceal the contrabrand goods, and of fights he had taken
+upon to conceal the contraband goods, and of fights he had taken
 part in.
 
 <P>
